# numerical_analysis_lab_04

./: .gitignore  CMakeLists.txt  dirichlet_problem_solver.cpp  dirichlet_problem_solver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
